[gd_scene load_steps=6 format=3 uid="uid://boyev0bdltlag"]

[ext_resource type="Script" uid="uid://sgdxur54yyxw" path="res://Scripts/obstacle.gd" id="1_15o2q"]
[ext_resource type="Texture2D" uid="uid://y4rd0c2lrgdv" path="res://Assets/obstacle.png" id="2_2p81s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f8t61"]
size = Vector2(40, 717)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_15o2q"]
size = Vector2(20, 573)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2p81s"]
size = Vector2(30, 715)

[node name="Obstacle" type="Node2D"]
script = ExtResource("1_15o2q")

[node name="UpperObsArea" type="Area2D" parent="."]
position = Vector2(0, 228)

[node name="Sprite2D" type="Sprite2D" parent="UpperObsArea"]
z_index = -4096
position = Vector2(0, -198)
scale = Vector2(1, 3.58)
texture = ExtResource("2_2p81s")

[node name="UpperAreaCollision" type="CollisionShape2D" parent="UpperObsArea"]
position = Vector2(3, -200.5)
shape = SubResource("RectangleShape2D_f8t61")
debug_color = Color(0.991938, 0, 0.258897, 0.42)

[node name="SafeArea" type="Area2D" parent="."]
position = Vector2(103, 0)

[node name="SafeAreaCollision" type="CollisionShape2D" parent="SafeArea"]
position = Vector2(59, 548)
shape = SubResource("RectangleShape2D_15o2q")
debug_color = Color(2.93598e-06, 0.639836, 0.358877, 0.42)

[node name="LowerObsArea" type="Area2D" parent="."]
position = Vector2(0, 836)

[node name="Sprite2D2" type="Sprite2D" parent="LowerObsArea"]
z_index = -4096
position = Vector2(10, 194)
scale = Vector2(1, 3.58)
texture = ExtResource("2_2p81s")

[node name="LowerAreaCollision" type="CollisionShape2D" parent="LowerObsArea"]
position = Vector2(11, 196.5)
shape = SubResource("RectangleShape2D_2p81s")
debug_color = Color(0.991938, 0, 0.258897, 0.42)

[connection signal="body_entered" from="UpperObsArea" to="." method="_on_obs_area_body_entered"]
[connection signal="body_entered" from="SafeArea" to="." method="_on_safe_area_body_entered"]
[connection signal="body_entered" from="LowerObsArea" to="." method="_on_obs_area_body_entered"]
